Fix player tab completions not respecting vanish, and revamp PR template. (#2333)
* Update the playerList method to accept a CommandSender argument and modify the return for Players to not showed vanished players.

* Update PR template to not be overbearing.